# render-rs

./: CHANGES.md  Cargo.toml  README.md  build.sh  nix_build.sh  nix_run.sh  osx_build.sh  osx_info.sh  osx_run.sh  osx_test.sh  win_build.bat  win_run.bat
render-core/: Cargo.toml
render-core/src/: allocator.rs  backend.rs  commands.rs  constants.rs  device.rs  encoder.rs  error.rs  format.rs  handles.rs  lib.rs  modules.rs  resources.rs  state.rs  system.rs  types.rs  utilities.rs
render-core/tests/: allocator.rs  create.rs  encoder.rs  format.rs  handles.rs  system.rs  utilities.rs
render-core/tests/common/: mod.rs
render-hal/: Cargo.toml
render-hal-dx12/: Cargo.toml
render-hal-dx12/src/: backend.rs  lib.rs  module.rs
render-hal-mock/: Cargo.toml
render-hal-mock/src/: backend.rs  device.rs  lib.rs  module.rs  types.rs
render-hal-mtl/: Cargo.toml
render-hal-mtl/src/: backend.rs  lib.rs  module.rs
render-hal-vk/: Cargo.toml  build.rs
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/: VERSIONS.txt
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/Applications/cube.app/Contents/: Info.plist
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/Applications/cube.app/Contents/MacOS/: cube  libvulkan.1.1.85.dylib
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/Applications/cube.app/Contents/Resources/Main.storyboardc/: Info.plist  MainMenu.nib  NSWindowController-B8D-0N-5wS.nib
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/Applications/cubepp.app/Contents/: Info.plist
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/Applications/cubepp.app/Contents/Frameworks/: libMoltenVK.dylib
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/Applications/cubepp.app/Contents/MacOS/: cubepp
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/Applications/cubepp.app/Contents/Resources/Main.storyboardc/: Info.plist  MainMenu.nib  NSWindowController-B8D-0N-5wS.nib  XfG-lQ-9wD-view-m2S-Jp-Qdl.nib
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/Applications/vulkaninfo.app/Contents/MacOS/: vulkaninfo
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/Documentation/: getting_started_macos.html  getting_started_macos.md  release_notes-macos.html
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/MoltenVK/macOS/MoltenVK.framework/Versions/A/: MoltenVK
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/macOS/Frameworks/vulkan.framework/: vulkan
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/macOS/Frameworks/vulkan.framework/Versions/A/: vulkan
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/macOS/Frameworks/vulkan.framework/Versions/A/Resources/: Info.plist
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/macOS/etc/vulkan/explicit_layer.d/: VkLayer_core_validation.json  VkLayer_object_tracker.json  VkLayer_parameter_validation.json  VkLayer_threading.json  VkLayer_unique_objects.json
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/macOS/lib/: libSPIRV-Tools-shared.dylib  libVkLayer_object_tracker.dylib  libVkLayer_threading.dylib  libVkLayer_unique_objects.dylib
render-hal-vk/redist/vulkansdk-macos-1.1.85.0/macOS/lib/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc
render-hal-vk/src/: allocator.rs  backend.rs  compile.rs  debug.rs  descriptors.rs  device.rs  lib.rs  module.rs  queue.rs  shader_views.rs  types.rs
render-hal-vk/src/raw/: buffer.rs  device.rs  errors.rs  escape.rs  fence.rs  format.rs  image.rs  instance.rs  memory.rs  mod.rs  object.rs  surface.rs  swap_chain.rs
render-hal-vk/src/raw/command/: buffer.rs  capability.rs  family.rs  fence.rs  mod.rs  pool.rs  queue.rs
