[workspace]
members = [
	"render-core",
	"render-hal",
	#"render-hal-dx12",
	"render-hal-mock",
	#"render-hal-mtl",
	"render-hal-vk",
]

[patch.crates-io]
ash = { git = "https://github.com/MaikKlein/ash.git", rev = "0b68927" }
vk-mem = { git = "https://github.com/h3r2tic/vk-mem-rs.git" }  # Forked for static CRT on Windows
