[package]
name = "render-core"
version = "0.1.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
keywords = ["rust", "render", "gfx", "graphics", "hal", "3d", "directx", "direct3d", "d3d", "dx12", "directx12", "vulkan", "vk", "metal"]
homepage = "https://github.com/gwihlidal/render-rs"
repository = "https://github.com/gwihlidal/render-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
option_set = "0.1.2"
bitflags = "1.1.0"
serde = "1.0.101"
serde_json = "1.0.40"
serde_derive = "1.0.101"
enum_primitive = "0.1.1"
failure = "0.1.5"
downcast-rs = "1.0.4"
libloading = "0.5.2"
glob = "0.3"
winit = "0.19.3"
log = "0.4"
fern = { version = "0.5.8", features = ["colored"] }
chrono = "0.4.9"
strum = "0.18"
strum_macros = "0.18.0"

[lib]
doctest = false