[package]
name = "render-hal-vk"
version = "0.1.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
keywords = ["rust", "render", "gfx", "graphics", "hal", "3d", "directx", "direct3d", "d3d", "dx12", "directx12", "vulkan", "vk", "metal"]
homepage = "https://github.com/gwihlidal/render-hal-rs"
repository = "https://github.com/gwihlidal/render-hal-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
render-hal = { path = "../render-hal" }
render-core = { path = "../render-core" }
ash = "0.31"
failure = "0.1.6"
relevant = "0.4.2"
log = "0.4"
fern = { version = "0.5.9", features = ["colored"] }
chrono = "0.4.10"
crossbeam-channel = "0.4.0"
smallvec = "1.1.0"
enum_primitive = "0.1.1"
downcast-rs = "1.1.1"
vk-sync = { git = "https://github.com/zedrian/vk-sync-rs.git", rev = "e28c05d" }
vk-mem = "0.2.2"
spirv-reflect = "0.2.3"
num-traits = "0.2.10"
meowhash = "0.1.2"
digest = "0.8.1"
twox-hash = "1.5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "windef", "winuser"] }
renderdoc = "0.7.1"

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android")))'.dependencies]
x11 = { version = "2.18.1", features = ["xlib"]}
xcb = { version = "0.9.0" }
renderdoc = "0.7.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20.0"
core-graphics = "0.19.0"
metal = "0.17.1"
metal-rs = "0.10.6"
foreign-types = "0.5.0"
objc = "0.2.7"

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false